force-app/main/default/objects/Fine__c/fields/Book_Issue__c.field-meta.xml
<CustomField>
    <fullName>Book_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book Issue</label>
    <referenceTo>Book_Issue__c</referenceTo>
    <relationshipLabel>Fines</relationshipLabel>
    <relationshipName>Fines</relationshipName>
    <type>Lookup</type>
</CustomField>