force-app/main/default/objects/Fine__c/fields/Fine_Date__c.field-meta.xml
<CustomField>
    <fullName>Fine_Date__c</fullName>
    <label>Fine Date.</label>
    <type>Date</type>
</CustomField>