force-app/main/default/objects/Fine__c/fields/Fine_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Fine_Per_Day__c</fullName>
    <label>Fine Per Day.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>