force-app/main/default/objects/Fine__c/fields/Fine_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fine_Reason__c</fullName>
    <label>Fine Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late Return</fullName>
            </value>
            <value>
                <fullName>Book Lost</fullName>
            </value>
            <value>
                <fullName>Book Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>