force-app/main/default/objects/Fine__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <label>Overdue Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>