force-app/main/default/objects/Fine__c/fields/Student0__c.field-meta.xml
<CustomField>
    <fullName>Student0__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student0</label>
    <referenceTo>Student0__c</referenceTo>
    <relationshipLabel>Fines</relationshipLabel>
    <relationshipName>Fines</relationshipName>
    <type>Lookup</type>
</CustomField>