force-app/main/default/objects/Fine__c/fields/Total_Fine__c.field-meta.xml
<CustomField>
    <fullName>Total_Fine__c</fullName>
    <formula>Fine_Per_Day__c  *  Overdue_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>