force-app/main/default/objects/Fine__c/validationRules/Overdue_Days_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Overdue_Days_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents users from entering negative overdue days.</description>
    <errorConditionFormula>Overdue_Days__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Overdue_Days__c</errorDisplayField>
    <errorMessage>Overdue Days cannot be negative.</errorMessage>
</ValidationRule>