force-app/main/default/objects/Fine__c/validationRules/Paid_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Date_Required</fullName>
    <active>true</active>
    <description>Requires the Paid Date when Status is Paid.</description>
    <errorConditionFormula>AND(
    ISPICKVAL( Payment_Status__c , &quot;Paid&quot;),
     ISBLANK( Fine_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Fine_Date__c</errorDisplayField>
    <errorMessage>Enter the Paid Date before marking the fine as Paid.</errorMessage>
</ValidationRule>